Fix mail display getting the wrong height in side-by-side mode

--- a/style/main.sass
+++ b/style/main.sass
@@ -177,6 +177,7 @@ blockquote
 
     .mail-display
         flex-grow: 1
+        height: 100% !important
 
     .compose-pane
         flex-grow: 1
